hphp/test/quick/typedef_option_fail1.php.expectf

Fatal error: Argument 1 passed to bar() must be an instance of foo, string given in %s on line 4
